--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@ limitations under the License.
 </head>
 
 <body>
-    <h1>Hello, world</h1>
-
-    <button onclick="fetchMessage()">Fetch Message</button>
-    <p id="message">Click on the button to fetch the message.</p>
+    <h1>Dave's github home</h1>
 </body>
 
 </html>
