--- a/CallTest/CallTest.html
+++ b/CallTest/CallTest.html
@@ -12,6 +12,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="scripts.js"></script>
+    <script src="scriptsV1.js"></script>
   </body>
 </html>
